Added comments to code

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,7 +21,7 @@
     <button class="btn"><a
         href="/signup"
         style="text-decoration:none;color:white"
-      >Signup!</a>
+      >Signup</a>
     </button>
   </form>
 </div>
