--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -8,6 +8,7 @@
         </div>
         <div class="meta">
           -{{user.username}},
+          {{! format date using format_date function }}
           {{format_date created_at}}
         </div>
       </section>
