--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,7 +11,7 @@
     <button class="btn"><a
         href="/login"
         style="color:white;text-decoration:none;"
-      >Login!</a>
+      >Login</a>
     </button>
   </form>
 </div>
